--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="input-field">
         <input type="password" placeholder="Password" autocomplete="new-password">
       </div>
-      <a href="#" class="link">Forgot Your Password?</a>
+      <a href="#" class="link"></a>
     </div>
     <div class="action">
       <button>Register</button>
