--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Login</h1>
     <div class="content">
       <div class="input-field">
-        <input type="email" placeholder="Email" autocomplete="nope">
+        <input type="student id" placeholder="Student Id" autocomplete="nope">
       </div>
       <div class="input-field">
         <input type="password" placeholder="Password" autocomplete="new-password">
