--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <div class="login-form">
   <form>
-    <h1>Login</h1>
+    <h1>Login To Alfarouk Islamic School !</h1>
     <div class="content">
       <div class="input-field">
         <input type="student id" placeholder="Student Id" autocomplete="nope">
